cpk: Avoid showing horizontal scroolbar, when header and footer overflows

--- a/themes/cpk-devel/less/cpk.less
+++ b/themes/cpk-devel/less/cpk.less
@@ -40,6 +40,15 @@
 //contain styling for portal views
 @import "parts/portal";
 
+
+//////////////////////////////////////////////////////////////////////////
+// Avoid showing horizontal scroolbar, when header and footer overflows
+body {
+  overflow-x: hidden;
+  margin-left: -500px;
+  margin-right: -500px;
+}
+
 @brand-unknown: #9E9E9E;
 
 @label-unknown-bg: @brand-unknown;
